# flashlogger

./: CLAUDE.md  CMakeLists.txt  README.md  efficiency.html
src/: crc16.h  field_layer.cpp  field_store.cpp  field_store.h  flashlog_error.h  iflash.h  istream.h
test/: CMakeLists.txt  ram_flash.h  test_field_layer.cpp
